--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     font-weight: 700;
     color:white;
     padding: 13px 35px;
+   
 }
 .nav-title{
     color: #181818;
@@ -45,14 +46,52 @@ nav a{
 }
 .header{
     background: #FFF8F3;
+    background-image: url("images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
     
 }
 .banar{
-    padding:30px 30px 30px 150px;
+    padding:30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
 }
 .banar-picture .profile-pic{
     width: 500px;
     display: flex;
+}
+.tect-item{
+    margin-bottom: 80px;
+}
+/* main section style */
+/* about section */
+.about{
+    padding: 130px;
+    border-radius:20px ;
+    background: #FFF8F3;
+    margin: 130px;
+}
+.section-title{
+    color:  #181818);
+text-align: center;
+
+font-size: 35px;
+
+font-weight: 700;
+
+}
+.section-text{
+    color:#757575);
+text-align: center;
+
+font-size: 18px;
+
+font-weight: 400;
+line-height: 30px;
+
+}
+#wid{
+    padding:30px 150px;
 }
