--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* styles for all body-style all */
 *{
     font-family: 'Open Sans', sans-serif; 
+    
 }
 .btn-tap{
     border-radius: 5px;
@@ -94,4 +95,42 @@ line-height: 30px;
 }
 #wid{
     padding:30px 150px;
+}
+.skill-container{
+    display:flex;
+    gap: 25px;
+    margin: 130px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 15px solid rgb(16, 15, 15);
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+.skilldiscription{
+    color:#757575 ;
+}
+main section{
+    margin-top: 129px;
+}
+.resume-col-title{
+    color: #474747);
+
+font-size: 25px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.containerresume-{
+    display: flex;
+    gap:50px;
+    margin: 130px;
+}
+.descrp , .resu-clg{
+   color: #757575
+}
+.downloadcv{
+    text-align: center;
+    margin-top: 50px;
 }
