--- a/style.css
+++ b/style.css
@@ -134,3 +134,12 @@ line-height: normal;
     text-align: center;
     margin-top: 50px;
 }
+.text-des{
+    text-align: center;
+}
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
